# sdd-copilot

./: BACKLOG.md  ENGINEERING_STANDARDS.md  PLAN.md  README.md  build-review.sh  build.sh  pyproject.toml  review.sh  test.sh
.github/: copilot-instructions.md
sdd_copilot/: __init__.py  builder.py  cli.py  exceptions.py  models.py  planner.py  prompt_builder.py  runner.py  spec_loader.py  status.py
sdd_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_builder.py  test_cli.py  test_e2e.py  test_exceptions.py  test_models.py  test_planner.py  test_prompt_builder.py  test_runner.py  test_spec_loader.py  test_status.py
