[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdd-copilot"
version = "0.1.0"
description = "CLI tool that orchestrates Spec-Driven Development via Copilot"
requires-python = ">=3.11"

[project.scripts]
sdd = "sdd_copilot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:logging"
